[package]
name = "rustsweeper"
version = "1.4.1"
edition = "2021"
description = "A command-line Minesweeper program written in Rust."
readme = "README.md"
repository = "https://github.com/AidenPierce616/rustsweeper"
exclude = ["/gifs", "target"]

[dependencies]
ansi_term = "0.12.1"
rand = "0.8.5"
crossterm = "0.27.0"
dialoguer = "0.11.0"
terminal_size = "0.3.0"
